# amt-apc

./: .gitignore  pyproject.toml
amt_apc/: __init__.py
amt_apc/data/: _dataset.py  _utils.py  download.py
amt_apc/data/_utils_midi/: conv_note2label.py
amt_apc/data/sv/: extract.py  sampler.py
amt_apc/eval/: cover.py
amt_apc/infer/: __main__.py
amt_apc/models/: _models.py
amt_apc/train/: __main__.py  _loss.py  _trainer.py
amt_apc/utils/: __init__.py  _config.py  _info.py  fluidsynth_render.py
data/_utils_midi/: conv_midi2note.py
data/sv/: extract.py  sampler.py
eval/: distance.py
utils/: _config.py  _info.py
