[project]
name = "amt-apc"
version = "0.1.0"
description = "AMT-APC: Automatic Piano Cover by Fine-Tuning an Automatic Music Transcription Model"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Kazuma Komiya" },
    { name = "Yoshihisa Fukuhara" },
]
keywords = ["music", "transcription", "piano", "deep-learning", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

dependencies = [
    "librosa>=0.10.2",
    "midi2audio>=0.1.1",
    "pretty-midi>=0.2.10",
    "soundfile>=0.13.1",
    "torch>=2.3.1",
    "torchaudio>=2.3.1",
    "tqdm>=4.66.5",
    "yt-dlp>=2024.8.6",
    "numpy<2.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "matplotlib>=3.8.0",
]
train = [
    "dlprog>=1.2.8",
    "essentia>=2.1b6.dev1110",
    "pytsmod>=0.3.8",
    "synctoolbox>=1.3.2",
]

[project.urls]
Homepage = "https://misya11p.github.io/amt-apc/"
Repository = "https://github.com/misya11p/amt-apc"
Paper = "https://arxiv.org/abs/2409.14086"

[project.scripts]
amt-apc = "amt_apc.infer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "matplotlib>=3.8.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[tool.hatch.build.targets.wheel]
packages = ["amt_apc"]
